fixed acme logo spacing?

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,3 +23,9 @@ body {
   font-family: 'Devonshire', cursive;
   color: #E35335;
 }
+
+#header a#logo1 img {
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
